[lesson 11 challenge] added buttons for quick jumps to first and last crimes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="crime_title_label">Title</string>
     <string name="crime_details_label">Details</string>
     <string name="crime_solved_label">Solved</string>
+    <string name="first_crime_button">First</string>
+    <string name="last_crime_button">Last</string>
 </resources>
