[lesson 13] added menu on toolbar (add new crime, come back, show/hide subtitle with count of crimes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
         <item>Late afternoon</item>
         <item>Pick a time...</item>
     </string-array>
+
+    <string name="new_crime">New Crime</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle_format">%1$d crimes</string>
 </resources>
