[lesson 13 challenge] added menu with delete item to crime fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,9 @@
         <item>Pick a time...</item>
     </string-array>
 
-    <string name="new_crime">New Crime</string>
-    <string name="show_subtitle">Show Subtitle</string>
-    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="new_crime">New crime</string>
+    <string name="show_subtitle">Show subtitle</string>
+    <string name="hide_subtitle">Hide subtitle</string>
     <string name="subtitle_format">%1$d crimes</string>
+    <string name="delete_crime">Delete crime</string>
 </resources>
