improved design of suspect buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
         <item quantity="other">%1$d crimes</item>
     </plurals>
 
-    <string name="crime_suspect_text">Choose suspect</string>
+    <string name="crime_suspect_text">Choose suspect...</string>
     <string name="crime_suspect_chosen_text">Suspect is %s</string>
     <string name="crime_report_text">Send crime report</string>
 
